Try to fix weird IE issue with overflow-x, add __prpl article draft

--- a/src/_components/_appShell/_appShell.sass
+++ b/src/_components/_appShell/_appShell.sass
@@ -26,7 +26,7 @@
     height: 75px
 
   .appShell__Main
-    overflow-x: hidden
+    overflow: hidden
     margin-left: 0
 
 @media (max-width: 800px)
