--- a/src/main.sass
+++ b/src/main.sass
@@ -99,7 +99,7 @@ section.cta__Container
     text-align: center
 
     .cta__Text
-      @extend .pargraphTitle
+      @extend .paragraphTitle
       font-size: $fs-headline
       font-weight: lighter
       color: #FFF
